--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=demo
 server.port=8080
+server.name=admin
 frontend_url=http://localhost:5173
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
