--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.application.name=demo
 server.port=8080
 server.name=admin
 frontend_url=http://localhost:5173
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
-spring.datasource.username=sa
-spring.datasource.password=1234
+# spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
+# spring.datasource.username=sa
+# spring.datasource.password=1234
+# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://cooking-sql.cv8m6gs80lzf.ap-southeast-2.rds.amazonaws.com:1433;databaseName=cooking;encrypt=false;trustServerCertificate=true
+spring.datasource.usernam=admin
+spring.datasource.password=1234509867
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.security.oauth2.client.registration.google.client-id=483923829122-3hbsteutlqgiq4oukdgtbrbtqjnb09oo.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
