--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name=demo
-server.port=8080
+# server.port=8080
 server.name=admin
 frontend_url=http://localhost:5173
 # spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
 # spring.datasource.username=sa
 # spring.datasource.password=1234
 # spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://cooking-sql.cv8m6gs80lzf.ap-southeast-2.rds.amazonaws.com:1433;databaseName=cooking;encrypt=false;trustServerCertificate=true
-spring.datasource.usernam=admin
-spring.datasource.password=1234509867
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.security.oauth2.client.registration.google.client-id=483923829122-3hbsteutlqgiq4oukdgtbrbtqjnb09oo.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
@@ -42,5 +38,20 @@ CLOUDINARY_API_SECRET=7kJ1TfEb7kEAVArwaY5jq0ctvlA
  # Box AI
 dialogflow.key.path=D:/VCS/duan/webcooking/backend/demo/newagent-9mjr-e07525211246.json
 dialogflow.project.id=newagent-9mjr
+
+# JDBC cho SQL Server
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# Railway sẽ tự inject PORT
+server.port=${PORT:8080}
+
 
 
