--- a/backend/demo/Dockerfile
+++ b/backend/demo/Dockerfile
@@ -1,22 +1,19 @@
-# Giai đoạn 1: Build app bằng Maven (image có sẵn Maven)
+# Giai đoạn 1: Build app bằng Maven
 FROM maven:3.9.9-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Sao chép toàn bộ project vào container
-COPY . .
+# Sao chép thư mục demo (chứa pom.xml)
+COPY demo /app
 
-# Build project và bỏ qua test
-RUN mvn clean package -DskipTests
+# Build project
+RUN mvn -f /app/pom.xml clean package -DskipTests
 
-# Giai đoạn 2: Chạy app bằng JDK nhẹ hơn
-FROM eclipse-temurin:17-jdk
+# Giai đoạn 2: Chạy ứng dụng
+FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-# Copy file jar đã build từ stage 1
+# Copy file jar từ build stage
 COPY --from=build /app/target/*.jar app.jar
 
-# Mở cổng 8080
 EXPOSE 8080
-
-# Lệnh chạy ứng dụng
 ENTRYPOINT ["java", "-jar", "app.jar"]
