--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -38,6 +38,7 @@ CLOUDINARY_API_SECRET=7kJ1TfEb7kEAVArwaY5jq0ctvlA
  # Box AI
 dialogflow.key.path=D:/VCS/duan/webcooking/backend/demo/newagent-9mjr-e07525211246.json
 dialogflow.project.id=newagent-9mjr
+# dialogflow.credentials.json= (bỏ trống)
 
 # JDBC cho SQL Server
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
