--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -9,7 +9,10 @@ frontend_url=http://localhost:5173
 spring.security.oauth2.client.registration.google.client-id=483923829122-3hbsteutlqgiq4oukdgtbrbtqjnb09oo.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+# spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
+GOOGLE_REDIRECT_URI=https://webcooking.onrender.com/login/oauth2/code/google
+
 
 # Cho phép gọi từ frontend Vue.js
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
