--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -6,6 +6,8 @@ frontend_url=http://localhost:5173
 # spring.datasource.username=sa
 # spring.datasource.password=1234
 # spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+
 spring.security.oauth2.client.registration.google.client-id=441882610067-96qbijivd26qdr9d3i9007e4e7ho835p.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
@@ -50,7 +52,7 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
