--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 # server.port=8080
 server.name=admin
-frontend_url=http://localhost:5173
+# frontend_url=http://localhost:5173
 # spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
 # spring.datasource.username=sa
 # spring.datasource.password=1234
@@ -50,7 +50,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
+frontend_url=https://webcooking.onrender.com
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
