--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=demo
 # server.port=8080
 server.name=admin
-# frontend_url=http://localhost:5173
-# spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
-# spring.datasource.username=sa
-# spring.datasource.password=1234
-# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+frontend_url=http://localhost:5173
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
 spring.security.oauth2.client.registration.google.client-id=441882610067-96qbijivd26qdr9d3i9007e4e7ho835p.apps.googleusercontent.com
@@ -46,11 +46,11 @@ dialogflow.project.id=newagent-9mjr
 # dialogflow.credentials.json= (bỏ trống)
 
 # JDBC cho SQL Server
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-frontend_url=https://webcooking.onrender.com
+# spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+# spring.datasource.url=${SPRING_DATASOURCE_URL}
+# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+# frontend_url=${FRONTEND_URL}
 # Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
