--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -2,18 +2,21 @@ spring.application.name=demo
 # server.port=8080
 server.name=admin
 frontend_url=http://localhost:5173
+frontend.deploy=https://webcooking.onrender.com
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Cooking;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+logging.level.org.hibernate.SQL=off
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=off
 
 
 spring.security.oauth2.client.registration.google.client-id=441882610067-96qbijivd26qdr9d3i9007e4e7ho835p.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
 # spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
-GOOGLE_REDIRECT_URI=https://webcooking.onrender.com/login/oauth2/code/google
+# spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+# spring.security.oauth2.client.registration.google.redirect-uri=https://webcooking.onrender.com/login/oauth2/code/google
 
 
 # Cho phép gọi từ frontend Vue.js
@@ -52,9 +55,6 @@ dialogflow.project.id=newagent-9mjr
 # spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 # frontend_url=${FRONTEND_URL}
 # Hibernate
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 # Railway sẽ tự inject PORT
 server.port=${PORT:8080}
