--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "echarts": "^6.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "lucide-vue-next": "^0.548.0",
     "mitt": "^3.0.1",
     "qrcode": "^1.5.4",
     "recharts": "^3.2.1",
