--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "vue-echarts": "^8.0.1",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-beta.9",
+    "vue3-google-login": "^2.0.34",
     "vue3-particles": "^2.12.0",
     "xlsx": "^0.18.5"
   },
