--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -16,10 +16,11 @@ google.client.id=441882610067-96qbijivd26qdr9d3i9007e4e7ho835p.apps.googleuserco
 spring.security.oauth2.client.registration.google.client-id=441882610067-96qbijivd26qdr9d3i9007e4e7ho835p.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=email,profile
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+# spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 
 # spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-# spring.security.oauth2.client.registration.google.redirect-uri=https://webcooking.onrender.com/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://cookingbackend.onrender.com/login/oauth2/code/google
+
 
 
 # Cho phép gọi từ frontend Vue.js
